--- a/src/app/shared/template/header/header.component.html
+++ b/src/app/shared/template/header/header.component.html
@@ -6,12 +6,12 @@
             </a>
         </div>
         <div class="nav-wrap">
-            <!-- <ul class="nav-right">
+            <ul class="nav-right">
 
                 <li *ngFor="let a_data of routingDataset;" class="d-none d-lg-block">
                     <a href="{{a_data.routing}}" [routerLinkActiveOptions]="{exact: true}" [routerLink]="[a_data.routing]" [routerLinkActive]="['active']" class="font-size-14 mr-2">{{a_data.section}}</a>
                 </li>
-            </ul> -->
+            </ul>
         </div>
     </div>
 </div>    
